<resources>
    <string name="app_name">Irbid 1</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="guest">Guest</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="not_match">Not Match</string>
    <string name="password">Password</string>
    <string name="in_valid_email">Invalid Email</string>
    <string name="required">Required</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="more">More</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="please_wait">Please Wait ....</string>
    <string name="amazing_choice">Amazing Choice</string>
    <string name="what_do_you_want_to_do">What do you want to do?</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="view_cart">View Cart</string>
    <string name="my_profile">My Profile</string>
    <string name="notification">Notification</string>
    <string name="logout">Logout</string>
    <string name="done">Done</string>
    <string name="update">Update</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>

</resources>