<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.SelectActivity">

    <Button
        android:id="@+id/login"
        android:layout_margin="20dp"
        android:textSize="25sp"
        android:padding="10dp"
        android:text="@string/login"
        android:textColor="@color/button_text_color"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <Button
        android:id="@+id/signup"
        android:layout_margin="20dp"
        android:textSize="25sp"
        android:padding="10dp"
        android:text="@string/signup"
        android:textColor="@color/button_text_color"
        app:layout_constraintTop_toBottomOf="@id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <Button
        android:id="@+id/guest"
        android:layout_margin="20dp"
        android:textSize="25sp"
        android:padding="10dp"
        android:text="@string/guest"
        android:textColor="@color/button_text_color"
        app:layout_constraintTop_toBottomOf="@id/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</androidx.constraintlayout.widget.ConstraintLayout>