<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.MoreFragment">

    <TextView
        android:id="@+id/profile"
        android:textSize="15sp"
        android:gravity="center"
        android:textColor="@color/button_text_color"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/my_profile"
        android:layout_margin="10dp"
        android:background="@drawable/text_view_background"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>


    <TextView
        android:id="@+id/notification"
        android:textSize="15sp"
        android:gravity="center"
        android:textColor="@color/button_text_color"
        app:layout_constraintTop_toBottomOf="@id/profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/notification"
        android:layout_margin="10dp"
        android:background="@drawable/text_view_background"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>


    <TextView
        android:id="@+id/logout"
        android:textSize="15sp"
        android:gravity="center"
        android:textColor="@color/button_text_color"
        app:layout_constraintTop_toBottomOf="@id/notification"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/logout"
        android:layout_margin="10dp"
        android:background="@drawable/text_view_background"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>