<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/background_activity"
    android:layout_height="match_parent"
    tools:context=".activites.LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:background="@color/purple_700"
        android:layout_height="?attr/actionBarSize"/>

    <ScrollView
        app:layout_constraintTop_toBottomOf="@id/toolBar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:id="@+id/email"
                app:layout_constraintTop_toTopOf="parent"
                android:inputType="textEmailAddress"
                android:layout_margin="20dp"
                android:padding="10dp"
                android:textSize="15sp"
                android:gravity="center_vertical"
                android:hint="@string/email"
                android:textColor="@color/text_color"
                android:textColorHint="@color/text_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/password"
                app:layout_constraintTop_toBottomOf="@id/email"
                android:inputType="textPassword"
                android:layout_margin="20dp"
                android:textSize="15sp"
                android:padding="10dp"
                android:gravity="center_vertical"
                android:hint="@string/password"
                android:textColor="@color/text_color"
                android:textColorHint="@color/text_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/login"
                android:layout_margin="20dp"
                android:textSize="20sp"
                android:padding="10dp"
                android:text="@string/login"
                android:textColor="@color/button_text_color"
                app:layout_constraintTop_toBottomOf="@id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>